maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:33: error: not found: value yMax
  if (y!= yMax && !hasTopWall(x,y) && getIndication(x,y-1)>num) {
          ^ShortestPathMaze:43: error: not found: value xMax
  if (x!= xMax && !hasLeftWall(x+1,y) && getIndication(x+1,y)>num) {
          ^